--- a/login.html
+++ b/login.html
@@ -1,65 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <style>
-    body {
-      font-family: Arial;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #f7f7f7;
-    }
-    .login-box {
-      width: 300px;
-      padding: 20px;
-      background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      border-radius: 10px;
-    }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-    }
-    button {
-      width: 100%;
-      padding: 10px;
-      background: black;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Login Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f2f2f2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .login-box {
+            background: #fff;
+            padding: 25px;
+            width: 300px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            border-radius: 8px;
+        }
+
+        h2 {
+            text-align: center;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            background: black;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background: #333;
+        }
+
+        p {
+            text-align: center;
+            margin-top: 10px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 
-  <div class="login-box">
+<div class="login-box">
     <h2>Login</h2>
-    <input type="email" id="user" placeholder="Enter your Email" required>
-    <input type="password" id="pass" placeholder="Enter Password" required>
+    <input type="text" id="username" placeholder="Enter ID">
+    <input type="password" id="password" placeholder="Enter Password">
     <button onclick="login()">Login</button>
-  </div>
+    <p id="message"></p>
+</div>
 
-  <script>
+<script>
     function login() {
-      let user = document.getElementById("user").value;
-      let pass = document.getElementById("pass").value;
+        let user = document.getElementById("username").value;
+        let pass = document.getElementById("password").value;
 
-      // Check if fields are filled
-      if (user.trim() === "" || pass.trim() === "") {
-        alert("Please enter email and password");
-        return;
-      }
-
-      // Allow login for ANY email & ANY password
-      localStorage.setItem("loggedUser", user);  // store logged-in email
-      window.location.href = "tracker.html";     // redirect
+        if (user === "admin" && pass === "123") {
+            document.getElementById("message").style.color = "green";
+            document.getElementById("message").innerHTML = "Login Successful ✅";
+        } else {
+            document.getElementById("message").style.color = "red";
+            document.getElementById("message").innerHTML = "Invalid ID or Password ❌";
+        }
     }
-  </script>
+</script>
 
 </body>
 </html>
